On profile and book changed the padding on the top to make sure its not hidden by navbar

--- a/src/main/resources/static/css/bookPageStylesheet.css
+++ b/src/main/resources/static/css/bookPageStylesheet.css
@@ -3,7 +3,7 @@
     /*!*Left Side - Book Information*!*/
     #leftSide-book-page{
         background-color: #37517e;
-        padding-top: 42px;
+        padding-top: 84px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -11,7 +11,6 @@
         height: 100%;
         width: 25%;
         overflow: hidden;
-
         @media (max-width:991px) {
             &{
                 width: 33%;
@@ -49,6 +48,7 @@
         width: 100%;
         height: fit-content;
         padding-left: 25%;
+        padding-top: 42px;
         @media (max-width:991px) {
             &{
                 padding-left: 33%;
