--- a/src/main/resources/static/css/profileStylesheet.css
+++ b/src/main/resources/static/css/profileStylesheet.css
@@ -8,7 +8,7 @@
     /*<!---------- Left Side - Book Information  ---------->*/
     #leftSide-user-profile{
         background-color: #37517e;
-        padding-top: 42px;
+        padding-top: 84px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -132,6 +132,7 @@
         width: 100%;
         height: fit-content;
         padding-left: 25%;
+        padding-top: 42px;
         padding-bottom: 62px;
         @media (max-width: 991px) {
             & {
